test/Fail/Issue1963MagicWith.err
Issue1963MagicWith.agda:30.1-31.16: error: [UnequalTerms]
The terms
  p .proj₁
and
  w
are not equal at type Nat
when checking that the type
(p : Σ Nat IsZero) (w : Nat) → F w (p .proj₂) of the generated with
function is well-formed
(https://agda.readthedocs.io/en/v2.9.0/language/with-abstraction.html#ill-typed-with-abstractions)
